--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   firebase_storage: ^11.2.7
   flutter:
     sdk: flutter
+  flutter_adaptive_ui: ^0.8.0+1
+  flutter_bloc: ^8.1.3
+  form_field_validator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
