--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   cloud_firestore: ^4.9.2
+  equatable: ^2.0.5
   firebase_auth: ^4.10.0
   firebase_core: ^2.16.0
   firebase_storage: ^11.2.7
