--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_adaptive_ui: ^0.8.0+1
   flutter_bloc: ^8.1.3
   form_field_validator: ^1.1.0
+  uuid: ^4.0.0
 
 dev_dependencies:
   flutter_test:
