--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	 <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Konum bilgilerine erişim izni isteği</string>
 </dict>
 </plist>
