--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_polyline_points: ^2.0.0
   form_field_validator: ^1.1.0
+  geolocator: ^10.0.1
   google_maps_flutter: ^2.5.0
   image_picker: ^1.0.4
   location: ^5.0.3
